# qualms

./: .env.template  .gitignore  .mcp.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  run-dev.sh  run.sh  story_declarative.txt  tsconfig.base.json
cli/: package.json  tsconfig.json
cli/src/: app.tsx  cli.ts  dispatch.ts  format.ts  handleInput.ts  story.ts  types.ts
cli/test/: dispatch.test.ts  format.test.ts  handleInput.test.ts
curses/: README.md  cli_app.py  dark_qualms_story.py  run-dev.sh  run.sh
deprecated/curses/: dark_qualms_story.py  run.sh
deprecated/python-legacy/: pyproject.toml
deprecated/python-legacy/tests/: test_coauthoring.py  test_story_behavior.py
deprecated/qualms/: story_writer.py  yaml_loader.py
examples/: README.md
examples/blank/: story.qualms.yaml  story_systems.json
examples/sol-proof/: story.qualms.yaml  (+1 more)
godot/: README.md  icon.svg.import  project.godot
mcp/: package.json
qualms/: MIGRATION.md  __init__.py  core.py  legacy.py  package.json  story_writer.py  tsconfig.json  yaml_loader.py
specs/: README.md  cli-coauthoring-migration-plan.md  conformance.md  engine-model.md  language.md  migration-plan.md  portable-ir.md  portable-story-contract-plan.md  protocol.md  remaining-recommendations.md  rules-engine.md  runtime-roadmap.md  story-yaml-schema.md
stories/: README.md
tests/: test_core_runtime.py  test_legacy_behavior.py  test_legacy_yaml_migration.py  test_story_behavior.py  test_story_yaml_projection.py  test_yaml_loader.py
tools/: convert_legacy_story.py
(+118 files in other folders)
